# boba

./: .gitignore  .hadolint.yaml  .latteignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc.json  .yamllint.yaml  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LICENSE-APACHE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  commitlint.config.cjs  latte.yaml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  spectral.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  commitlint.yml  docs.yml  images.yml  release-dry-run.yml
.trunk/: trunk.yaml
.vale/styles/: README.md
benchmarks/scenarios/: etl-gpu-inference.yaml  pending-node-assignment.yaml  spill-heavy-parquet.yaml  training-validation-metrics.yaml
deploy/kuberay/: README.md  demo-gpu.md  demo-kind.md  kind-config.yaml  raycluster-cpu.yaml  raycluster-heterogeneous.yaml
docs/: index.md
docs/adrs/: ADR-0001-source-available-license.md
docs/architecture/: system.md
docs/benchmarks/: validation-matrix.md
docs/contributing/: dev-environment.md
docs/evidence/: ray-data-pain-points.md
docs/plan/: overview.md
docs/why-boba-matters/: fundamental-limitations.md  gpu-and-heterogeneity.md  how-to-help.md  (+3 more)
scripts/: bootstrap-dev.sh  demo-down.sh  demo-status.sh  demo-up.sh  run-trunk-check.sh
services/api/: Dockerfile  pyproject.toml
services/api/src/boba_api/: __init__.py  app.py
services/api/tests/: test_app.py
(+6 files in other folders)
