[project]
name = "boba-workspace"
version = "0.1.0"
description = "Monorepo workspace for the Boba control plane prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["boba", "boba-api"]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "mkdocs-material>=9.6.14",
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "pytest-mock>=3.14.0",
  "ruff>=0.11.6",
  "types-PyYAML>=6.0.12.20250326",
  "yamllint>=1.37.1",
]

[tool.uv.workspace]
members = ["packages/sdk", "services/api"]

[tool.uv.sources]
boba = { workspace = true }
boba-api = { workspace = true }

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["packages/sdk/tests", "services/api/tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true
packages = ["boba", "boba_api"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages/sdk/src", "services/api/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
docstring-code-format = true
